# brella-mass-outbound

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
src/brella_outbound/: __init__.py  bootstrap.py
src/brella_outbound/application/services/: campaign_service.py
src/brella_outbound/cli/: main.py
src/brella_outbound/core/: config.py
src/brella_outbound/domain/models/: attendee.py  campaign.py  event.py
src/brella_outbound/domain/ports/: brella_api_port.py  logger_port.py  message_generator_port.py
src/brella_outbound/domain/services/: outreach_service.py
src/brella_outbound/infrastructure/brella/: brella_api_client.py  jsonapi_parser.py
src/brella_outbound/infrastructure/db/: unit_of_work.py
src/brella_outbound/infrastructure/db/mappers/: __init__.py
src/brella_outbound/infrastructure/db/migrations/: env.py
src/brella_outbound/infrastructure/db/tables/: __init__.py  attendee.py  attendee_group.py  campaign.py  event.py  function.py  industry.py  intent.py  intent_pair.py  interest.py  interest_category.py  metadata.py  outreach_message.py  persona.py  (+1 more)
src/brella_outbound/infrastructure/llm/: claude_generator.py  openai_generator.py  template_generator.py
src/brella_outbound/infrastructure/observability/: console_logger.py
src/brella_outbound/mcp/: server.py
src/brella_outbound/mcp/tools/: attendees.py  campaign.py  interests.py  messages.py
tests/: conftest.py
tests/fakes/: __init__.py
tests/unit/: test_campaign_service.py  test_jsonapi_parser.py  test_outreach_service.py  test_template_generator.py
(+1 files in other folders)
