[project]
name = "brella-outbound"
version = "0.1.0"
description = "Personalized mass outreach tool for Brella event networking platform"
readme = "README.md"
authors = [
    { name = "Bryan Tran", email = "bryan.tran053@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.84.0",
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "sqlalchemy>=2.0",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[project.scripts]
brella = "brella_outbound.cli.main:app"
brella-mcp = "brella_outbound.mcp.server:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "C", "D", "B", "I", "Q", "COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["brella_outbound"]

[tool.mypy]
mypy_path = "src"
strict_equality = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real APIs",
]
